<resources>
    <string name="bt_bip_app_name">Bluetooth Image Transfer</string>
    <string name="bt_bipi_push_confirmation">Image Push Confirmation</string>
    <string name="bt_bipi_unsupported_format">"Encoding is not supported by the receiver.
Continue sending?"</string>
    <string name="bt_bipi_push_confirmation_ok">OK</string>
    <string name="bt_bipi_push_confirmation_cancel">Cancel</string>
    <string name="bt_bip_transmitting_dialog_hide">Hide</string>
    <string name="bt_bip_transmitting_dialog_cancel">Cancel</string>
    <string name="bt_bip_transmitting_dialog_ok">OK</string>
    <string name="bt_bip_transmitting_dialog_yes">Yes</string>
    <string name="bt_bip_transmitting_dialog_no">No</string>
    <string name="bt_bip_transmitting">Sending image, %1$s</string>
    <string name="bt_bip_transmitting_successful">Image %1$s is sent</string>
    <string name="bt_bip_transmitting_fail">Image %1$s is failed to sent</string>
    <string name="bt_bip_cancel_pending_job">Cancel this pending transmission?</string>
    <string name="bt_bip_pending_job">Send %1$s (Pending)</string>
    <string name="bt_bipr_incoming_request">Incoming image request</string>
    <string name="bt_bipr_incoming_request_description">Select to receive %1$s</string>
    <string name="bt_bipr_accept_title">Incoming Image</string>
    <string name="bt_bipr_accept_content">Accept %1$s (%2$sKB) from %3$s ?</string>
    <string name="bt_bipr_accept_always">Always accept?</string>
    <string name="bt_bipr_accept_yes">Yes</string>
    <string name="bt_bipr_accept_no">No</string>
    <string name="bt_bip_receiving">Receiving image, %1$s</string>
    <string name="bt_bip_receiving_successful">"Image %1$s is received.
Would you like to view this image?"</string>
    <string name="bt_bip_receiving_fail">Image %1$s is failed to receive</string>
    <string name="bt_bip_toast_connect_fail">Connection failed</string>
    <string name="bt_bip_toast_storage_unmounted">Please check if SD card is ready</string>
    <string name="bt_bip_toast_sending_object">Sending image, %1$s</string>
    <string name="bt_bip_auth_password">Password:</string>
    <string name="bt_bip_auth_userid">ID:</string>
    <string name="bt_bip_auth_ok">OK</string>
    <string name="bt_bip_auth_cancel">Cancel</string>
    <string name="permission_label_bluetoothPrint">Bluetooth Print Access</string>
    <string name="permission_desp_bluetoothPrint">Permission of accessing bluetooth print funciton.</string>
    <string name="app_name">Bluetooth Print</string>
    <string name="printer_settings">Printer Settings</string>
    <string name="bt_print_entry_label">Bluetooth</string>
    <string name="dialog_title_bpp_not_ready">Service unavailable</string>
    <string name="dialog_bt_not_ready_confirm">Confirm</string>
    <string name="toast_bpp_enable_fail">Enable print service failed</string>
    <string name="toast_connect_fail">Connection failed</string>
    <string name="toast_get_printer_attr_fail">Getting printer capabilities failed</string>
    <string name="toast_get_printer_attr">Get printer capabilities...</string>
    <string name="toast_get_default_value">Get default value...</string>
    <string name="print">Print</string>
    <string name="get_default_value">Get Default Value</string>
    <string name="paper_size">Paper size</string>
    <string name="number_of_copies">Set number of copies</string>
    <string name="sides">Sides settings</string>
    <string name="pages_per_sheet">Pages per sheet</string>
    <string name="orientation">Orientation</string>
    <string name="quality">Quality settings</string>
    <string name="bluetooth_printing">Printing %1$s</string>
    <string name="printing_successful">File %1$s is printed</string>
    <string name="printing_fail">File %1$s is not printed</string>
    <string name="dialog_printing_hide">Hide</string>
    <string name="dialog_printing_cancel">Cancel</string>
    <string name="dialog_printing_ok">OK</string>
    <string name="reason_attention_required">Attention Required</string>
    <string name="reason_media_jam">Media Jam</string>
    <string name="reason_paused">Paused</string>
    <string name="reason_door_open">Door(s) Open</string>
    <string name="reason_media_low">Media Low</string>
    <string name="reason_media_empty">Media Empty</string>
    <string name="reason_output_area_almost_full">Output Area Almost Full</string>
    <string name="reason_output_area_full">Output Area Full</string>
    <string name="reason_marker_supply_low">Marker Supply Low</string>
    <string name="reason_marker_supply_empty">Marker Supply Empty</string>
    <string name="reason_marker_failure">Marker Failure</string>
    <string name="reason_nondefine">nondefine</string>
    <string name="auth_passcode">Pass code</string>
    <string name="auth_ok">OK</string>
    <string name="auth_cancel">Cancel</string>
    <string name="bt_bpp_copies_title">Number of Copies</string>
    <string name="bt_bpp_copies_set">Set</string>
    <string name="bt_bpp_copies_cancel">Cancel</string>
    <string name="bt_bpp_reentry_error">Please wait for current print job complete.</string>
    <string name="bluetooth_dun_authorize_title">Bluetooth dial up authorizing</string>
    <string name="bluetooth_dun_authorize_message">Allow the dial up connection request from %1$s?</string>
    <string name="bluetooth_dun_authorize_allow">Allow</string>
    <string name="bluetooth_dun_authorize_decline">Decline</string>
    <string name="bluetooth_dun_notification_connect_request_ticker">Bluetooth Dial up authorization request</string>
    <string name="bluetooth_dun_notification_connect_request_title">Bluetooth Dial up authorization</string>
    <string name="bluetooth_dun_notification_connect_request_message">Select to accept request from %1$s</string>
    <string name="bluetooth_ftp_server_authorize_notify_ticker">Bluetooth FTP authorization request</string>
    <string name="bluetooth_ftp_server_authorize_notify_title">Bluetooth FTP authorization request</string>
    <string name="bluetooth_ftp_server_authorize_notify_message">Select to allow FTP connection</string>
    <string name="bluetooth_ftp_server_authorize_title">Bluetooth FTP authorization</string>
    <string name="bluetooth_ftp_server_authorize_message">Allow the FTP connection request from %s</string>
    <string name="bluetooth_ftp_server_authorize_allow">Allow</string>
    <string name="bluetooth_ftp_server_authorize_decline">Decline</string>
    <string name="bluetooth_ftp_server_connected_notify_ticker">Bluetooth FTP is connected</string>
    <string name="bluetooth_ftp_server_connected_notify_title">%s is connected via FTP</string>
    <string name="bluetooth_ftp_server_connected_notify_message">Select to disconnect</string>
    <string name="bluetooth_ftp_server_disconnect_title">Disconnect Bluetooth FTP</string>
    <string name="bluetooth_ftp_server_disconnect_message">Disconnect from %s</string>
    <string name="bluetooth_ftp_server_off_sd_unmounted">FTP server shuts down due to unmounted SD card.</string>
    <string name="bluetooth_ftp_client_off_sd_unmounted">FTP client shuts down due to unmounted SD card.</string>
    <string name="bluetooth_ftp_both_off_sd_unmounted">FTP server and client shut down due to unmounted SD card.</string>
    <string name="bluetooth_ftp_client_sd_not_ready">Before activating FTP client, please check if SD card is ready.</string>
    <string name="bluetooth_ftp_client_connecting">Connecting</string>
    <string name="bluetooth_ftp_client_processing">Processing</string>
    <string name="bluetooth_ftp_client_refreshing">Refreshing</string>
    <string name="bluetooth_ftp_client_cancelling">Cancelling</string>
    <string name="bluetooth_ftp_client_activated_notify_ticker">Bluetooth FTP client is activated.</string>
    <string name="bluetooth_ftp_client_activated_notify_title">%s is connected via FTP</string>
    <string name="bluetooth_ftp_client_activated_notify_message">Click to show Bluetooth FTP client</string>
    <string name="bluetooth_ftp_client_connection_failed">Connection failed</string>
    <string name="bluetooth_ftp_client_disconnected">FTP connection lost</string>
    <string name="bluetooth_ftp_client_transferring">Transferring</string>
    <string name="bluetooth_ftp_client_sending">Sending file: %s</string>
    <string name="bluetooth_ftp_client_getting">Getting file: %s</string>
    <string name="bluetooth_ftp_client_transfer_finished">Transfer finished</string>
    <string name="bluetooth_ftp_client_transfer_unfinished">Transfer unfinished</string>
    <string name="bluetooth_ftp_client_browse_failed">Failed to browse file(s)</string>
    <string name="bluetooth_ftp_client_set_path_failed_title">Failed to change path</string>
    <string name="bluetooth_ftp_client_set_path_failed_message">Failed to change path to %s</string>
    <string name="bluetooth_ftp_client_root_folder">Root folder</string>
    <string name="bluetooth_ftp_client_parent_folder">Parent folder</string>
    <string name="bluetooth_ftp_client_confirm_delete_title">Confirm Deletions</string>
    <string name="bluetooth_ftp_client_confirm_delete_message">Delete %s ?</string>
    <string name="bluetooth_ftp_client_delete_failed_title">Failed to delete</string>
    <string name="bluetooth_ftp_client_delete_failed_message">Failed to delete %s</string>
    <string name="bluetooth_ftp_client_new_folder_failed_title">Failed to create folder</string>
    <string name="bluetooth_ftp_client_new_folder_failed_message">Failed to create the folder: %s</string>
    <string name="bluetooth_ftp_client_confirm_exit_title">Exit FTP</string>
    <string name="bluetooth_ftp_client_confirm_exit_message">Exit FTP client?</string>
    <string name="bluetooth_ftp_client_current_is_root">Current path is root</string>
    <string name="bluetooth_ftp_client_no_file_to_mark">No file to mark</string>
    <string name="bluetooth_ftp_client_no_marked_file">No file is marked</string>
    <string name="bluetooth_ftp_client_empty_folder">This folder is empty</string>
    <string name="bluetooth_map_server_settings">Remote Message Access settings</string>
    <string name="bluetooth_map_server_enable_title">Remote Message Access</string>
    <string name="bluetooth_map_server_enable_summary">Turn on</string>
    <string name="bluetooth_map_server_sim_index_title">Select SIM</string>
    <string name="bluetooth_map_server_account_index_title">Select Email account</string>
    <string name="bt_prxm_devs_title">Proximity settings</string>
    <string name="bt_prxm_devs_connect_title">Connect</string>
    <string name="bt_prxm_devs_connect_summary">Connect to proximity device</string>
    <string name="bt_prxm_devs_link_loss_group_title">Link loss</string>
    <string name="bt_prxm_devs_link_loss_level_title">Link loss alert level</string>
    <string name="bt_prxm_devs_link_loss_level_summary">Set up alert level</string>
    <string name="bt_prxm_devs_path_loss_group_title">Path loss</string>
    <string name="bt_prxm_devs_path_loss_level_title">Path loss alert level</string>
    <string name="bt_prxm_devs_path_loss_level_summary">Set up alert level</string>
    <string name="bt_prxm_devs_path_loss_threshold_title">Path loss threshold</string>
    <string name="bt_prxm_devs_path_loss_threshold_summary">Set up signal strength threshold</string>
    <string name="bt_prxm_plt_current_rssi">Current estimation of distance</string>
    <string name="bt_prxm_plt_using_current_rssi">Use current estimation of distance for path loss alert threshold</string>
    <string name="bt_prxm_plt_path_loss_threshold_title">Path loss threshold</string>
    <string name="bluetooth_simap_server_settings">Remote SIM settings</string>
    <string name="bluetooth_simap_server_enable_title">Remote SIM mode</string>
    <string name="bluetooth_simap_server_enable_summary">Turn on</string>
    <string name="bluetooth_simap_server_sim_index_title">Select SIM</string>
</resources>