<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference android:title="@string/paper_size" android:key="paper_size_setting" android:summary="4 x 6" />
    <Preference android:title="@string/number_of_copies" android:key="number_of_copies_setting" android:summary="1" />
    <ListPreference android:title="@string/sides" android:key="sides_setting" android:summary="One-sided" />
    <ListPreference android:title="@string/pages_per_sheet" android:key="pages_per_sheet_setting" android:summary="1" />
    <ListPreference android:title="@string/orientation" android:key="orientation_setting" android:summary="Portrait" />
    <ListPreference android:title="@string/quality" android:key="quality_setting" android:summary="Normal" />
</PreferenceScreen>