<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/bluetooth_simap_server_settings" android:key="simap_server_category">
        <CheckBoxPreference android:persistent="false" android:title="@string/bluetooth_simap_server_enable_title" android:key="simap_server_enable" android:summary="@string/bluetooth_simap_server_enable_summary" />
        <ListPreference android:persistent="false" android:entries="@array/bluetooth_simap_server_sim_index_entries" android:title="@string/bluetooth_simap_server_sim_index_title" android:key="simap_server_sim_index" android:dependency="simap_server_enable" android:entryValues="@array/bluetooth_simap_server_sim_index_values" />
    </PreferenceCategory>
</PreferenceScreen>